Modernize config-loader
Use java.nio.file.Path throughout the component, leading to simpler
code.

Change-Id: I25dd43d03a0a3930460a5acd4a006e938e6d24da
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>